fix potential issues